--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+  <form action="submit.php" method="POST">
+    <div class="g-recaptcha" data-sitekey="6Ld-53MrAAAAAJsOU8Eo7iyc9VxHO6Z2GbWmyRsZ"></div>
+    <button type="submit">送る！</button>
+</form>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HARUOMILABOプライバシーポリシー</title>
